network-service/demo-svc-external-name.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-svc-external-name
spec:
  type: ExternalName
  externalName: google.com
