network-service/demo-svc-load-balancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-svc-load-balancer
spec:
  selector:
    app: demo-svc-load-balancer
  ports:
    - port: 8765
      targetPort: 9376
  type: LoadBalancer
