network-service/demo-svc-multi-port.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-svc-multiport-app
  labels:
    app: demo-svc-multiport-app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: demo-svc-multiport-app
  template:
    metadata:
      labels:
        app: demo-svc-multiport-app
    spec:
      containers:
      - name: demo-svc-multiport-app-2023
        image: neotkm/pod-healthcheck:v0.05
      - name: demo-svc-multiport-app-2024
        image: neotkm/pod-healthcheck:v0.05
---
kind: Service
apiVersion: v1
metadata:
  name: demo-svc-multiport-app
spec:
  selector:
    app: demo-svc-multiport-app
  ports:
    - name: port-2023
      protocol: TCP
      port: 8023
      targetPort: 2023
    - name: port-2024
      protocol: TCP
      port: 8024
      targetPort: 2024
