network-service/demo-svc-node-port.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-svc-node-port
  labels:
    app: demo-svc-node-port
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: demo-svc-node-port
  template:
    metadata:
      labels:
        app: demo-svc-node-port
    spec:
      containers:
      - name: demo-svc-node-port
        image: neotkm/pod-healthcheck:v0.05
        imagePullPolicy: IfNotPresent

---
apiVersion: v1
kind: Service
metadata:
  name: demo-svc-node-port
spec:
  type: NodePort
  ports:
    - targetPort: 2021
      port: 8080
      nodePort: 30000
  selector:
    app: demo-svc-node-port
