network-service/demo-svc-with-selector.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-svc-with-selector
spec:
  selector:
    app: demo-svc-with-selector
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
