network-service/demo-svc-without-selector.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-svc-without-selector
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376

---
apiVersion: v1
kind: Endpoints
metadata:
  name: demo-svc-without-selector
subsets:
  - addresses:
      - ip: 192.0.2.42
    ports:
      - port: 9376
